--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 body
-{font-family: "Gill Sans", sans-serif;
+{font-family: "Gill Sans", cursive;
 text-decoration: underline;
 background-image: url("Harry-Potter-Hogwarts-castle-winter-architecture-2265070-wallhere.com.jpg"); background-repeat: no-repeat;background-size: cover;
 color: rgb(0, 0, 0)
